<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home_destination"
    tools:ignore="UnusedNavigation">

    <activity
        android:id="@+id/mainActivity"
        android:name="tech.appclub.loanmanager.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/home_destination"
        android:name="tech.appclub.loanmanager.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_add_loan"
            app:destination="@id/addLoanFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/home_to_intro"
            app:destination="@id/introFragment" />
        <action
            android:id="@+id/home_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="loanId"
                android:defaultValue="-1"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/history_destination"
        android:name="tech.appclub.loanmanager.ui.HistoryFragment"
        android:label="@string/history_fragment_title"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/addLoanFragment"
        android:name="tech.appclub.loanmanager.ui.AddLoanFragment"
        android:label="@string/add_loan_fragment_title"
        tools:layout="@layout/fragment_add_loan" />

    <fragment
        android:id="@+id/paid_loan_destination"
        android:name="tech.appclub.loanmanager.ui.PaidLoansFragment"
        android:label="@string/loan_menu_paid"
        tools:layout="@layout/fragment_paid_loans" />

    <fragment
        android:id="@+id/introFragment"
        android:name="tech.appclub.loanmanager.ui.IntroFragment"
        android:label="fragment_intro"
        tools:layout="@layout/fragment_intro">
        <action
            android:id="@+id/intro_to_home"
            app:destination="@id/home_destination"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/settings_destination"
        android:name="tech.appclub.loanmanager.ui.SettingsFragment"
        android:label="@string/settings_fragment_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/editFragment"
        android:name="tech.appclub.loanmanager.ui.EditFragment"
        android:label="@string/edit_fragment_title"
        tools:layout="@layout/fragment_edit" >
        <argument
            android:name="loanId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
</navigation>