<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addLoan"
            type="tech.appclub.loanmanager.ui.AddLoanFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.AddLoanFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/holder_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loan_holder_name"
                android:textColorHint="@android:color/darker_gray"
                app:boxBackgroundColor="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="6dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:boxStrokeWidth="0.2dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/holder_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:inputType="textPersonName|text"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:typeface="normal"
                    tools:text="Arslan" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/holder_amount_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/loan_amount"
                android:textColorHint="@android:color/darker_gray"
                app:boxBackgroundColor="@android:color/white"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="6dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:startIconDrawable="@drawable/ic_coins"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/holder_amount_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:inputType="number|numberDecimal"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/black"
                    android:typeface="normal"
                    tools:text="2,000,000" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_currency"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dialog"
                tools:listitem="@layout/currency_spinner_item_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_bg"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/received_date_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/select_received_date"
                        android:onClick="@{() -> addLoan.selectReceivedDate()}"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/received_date_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/select_received_date"
                        android:textColor="#80FFFFFF"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="4dp"
                        android:alpha="0.2"
                        android:background="@android:color/white" />

                    <TextView
                        android:id="@+id/received_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:backgroundTint="@android:color/white"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/date_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_bg"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/payment_date_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/select_payment_date"
                        android:onClick="@{() -> addLoan.selectPaymentDate()}"
                        android:src="@drawable/ic_calendar"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/payment_date_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/select_payment_date"
                        android:textColor="#80FFFFFF"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:alpha="0.5"
                        android:background="@android:color/white" />

                    <TextView
                        android:id="@+id/payment_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_bg"
                        android:backgroundTint="@android:color/white"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/date_placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.2"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_action"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@android:string/cancel"
                    android:onClick="@{() -> addLoan.cancel()}"
                    app:backgroundTint="@android:color/holo_red_dark" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_loan_action"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:onClick="@{() -> addLoan.addLoanAction()}"
                    android:text="@string/add_loan_fragment_title"
                    app:backgroundTint="@android:color/holo_green_dark" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>